# cyxcloud

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DATASTREAM.md  Dockerfile.cli  Dockerfile.gateway  Dockerfile.gateway.build  Dockerfile.node  Dockerfile.rebalancer  LICENSE  README.md  REALWORLD.md  TodoProduction.md  USAGE.md  USECASE.md  VISION.md  docker-compose.dev.yml  docker-compose.tls.yml  docker-compose.yml  infrastructure.md  railway.toml
.github/workflows/: ci.yml  gateway-image.yml  release.yml
certs/: .gitignore  README.md
cyxcloud-cli/: Cargo.toml
cyxcloud-cli/src/: client.rs  config.rs  cyxwiz_client.rs  main.rs  symbols.rs
cyxcloud-cli/src/commands/: auth.rs  dataset.rs  delete.rs  download.rs  list.rs  mod.rs  status.rs  upload.rs
cyxcloud-core/: Cargo.toml
cyxcloud-core/benches/: crypto.rs  erasure_coding.rs
cyxcloud-core/src/: chunk.rs  circuit_breaker.rs  crypto.rs  erasure.rs  error.rs  lib.rs  tls.rs
cyxcloud-gateway/: Cargo.toml
cyxcloud-gateway/src/: audit.rs  auth.rs  auth_api.rs  data_access.rs  dataset_api.rs  datastream.rs  grpc_api.rs  lib.rs  main.rs  metrics.rs  node_client.rs  node_monitor.rs  payment_daemon.rs  public_registry.rs  rebalancer_daemon.rs  s3_api.rs  state.rs  verification.rs  websocket.rs
cyxcloud-gateway/src/blockchain/: client.rs  mod.rs  node_registry.rs  payment_pool.rs  subscription.rs  types.rs
cyxcloud-gateway/tests/: integration_tests.rs
cyxcloud-metadata/: Cargo.toml
cyxcloud-metadata/migrations/: 001_initial.sql  002_node_fault_tolerance.sql  003_storage_reservation.sql  004_node_wallet.sql  005_uptime_tracking.sql  006_chunk_index.sql  007_datastream.sql  008_composite_indexes.sql
cyxcloud-metadata/src/: cache.rs  health.rs  lib.rs  models.rs  postgres.rs  quorum.rs  topology.rs
cyxcloud-network/: Cargo.toml
cyxcloud-network/examples/: cluster_node.rs
cyxcloud-network/src/: behavior.rs  discovery.rs  grpc_client.rs  grpc_server.rs  lib.rs  protocol.rs
cyxcloud-network/tests/: discovery_test.rs  grpc_test.rs  integration_test.rs
cyxcloud-node/: Cargo.toml  config.example.toml
cyxcloud-node/src/: command_executor.rs  config.rs  cyxwiz_api_client.rs  data_loader.rs  datastream_client.rs  health.rs  lib.rs  machine_service.rs  main.rs  metrics.rs  symbols.rs  training_executor.rs  verification.rs
cyxcloud-node/src/blockchain/: client.rs  heartbeat.rs  mod.rs  registration.rs  rewards.rs  types.rs
cyxcloud-node/tests/: datastream_test.rs  e2e_training_test.rs  verification_test.rs
cyxcloud-protocol/: Cargo.toml  build.rs
cyxcloud-protocol/proto/: chunk.proto  data.proto  datastream.proto  metadata.proto  node.proto
cyxcloud-protocol/src/: lib.rs
cyxcloud-rebalancer/: Cargo.toml
cyxcloud-rebalancer/src/: config.rs  detector.rs  executor.rs  lib.rs  main.rs  metadata_client.rs  network_client.rs  planner.rs  transfer.rs
cyxcloud-storage/: Cargo.toml
cyxcloud-storage/benches/: storage.rs
cyxcloud-storage/src/: backend.rs  lib.rs  memory.rs  rocks.rs  sled_backend.rs
docs/: blockchain.md  communication.md  communication_flow.md  flow.md  payment_system.md  server_node_data_stream.md
scripts/: generate-dev-certs.sh  run_cluster.ps1  run_cluster.sh  test_cluster.ps1
tests/: end_to_end.rs
