[workspace]
resolver = "2"
members = [
    "cyxcloud-core",
    "cyxcloud-storage",
    "cyxcloud-network",
    "cyxcloud-metadata",
    "cyxcloud-node",
    "cyxcloud-gateway",
    "cyxcloud-rebalancer",
    "cyxcloud-cli",
    "cyxcloud-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyxwiz/cyxcloud"
rust-version = "1.80"

[workspace.dependencies]
# ===== Erasure Coding =====
reed-solomon-erasure = { version = "6.0", features = ["simd-accel"] }

# ===== Networking =====
libp2p = { version = "0.53", features = [
    "quic",
    "kad",
    "gossipsub",
    "identify",
    "ping",
    "noise",
    "yamux",
    "dns",
    "tcp",
    "macros",
    "tokio",
] }
quinn = "0.10"
rustls = "0.22"

# ===== Storage Backend =====
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
sled = "0.34"

# ===== Async Runtime =====
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-stream = "0.1"
futures = "0.3"

# ===== Cryptography =====
blake3 = { version = "1.5", features = ["rayon", "mmap"] }
aes-gcm = "0.10"
argon2 = "0.5"
ring = "0.17"

# ===== Serialization =====
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"
tonic-build = "0.11"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ===== Database & Caching =====
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }

# ===== Observability =====
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# ===== Performance =====
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
memmap2 = "0.9"

# ===== Blockchain =====
# Using 2.1 which has better zeroize compatibility
solana-sdk = "2.1"
solana-client = "2.1"

# ===== Utilities =====
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
bytes = { version = "1.5", features = ["serde"] }
rand = "0.8"
base64 = "0.21"
bs58 = "0.5"
jsonwebtoken = "9.2"
# ed25519-dalek version must be compatible with zeroize used by libp2p
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# ===== HTTP/API =====
axum = { version = "0.7", features = ["macros", "ws"] }
hyper = "1.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# ===== Testing =====
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"
tempfile = "3.8"

[workspace.metadata.features]
io-uring = ["cyxcloud-storage/io-uring", "cyxcloud-node/io-uring"]
fips = ["cyxcloud-core/fips"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
