[package]
name = "cyxcloud-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CyxCloud command-line client"

[[bin]]
name = "cyxcloud"
path = "src/main.rs"

[dependencies]
cyxcloud-core = { path = "../cyxcloud-core" }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# CLI
clap = { workspace = true }

# Progress/output
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
mime_guess = "2.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config and auth
dirs = "5.0"
rpassword = "7.3"
toml = "0.8"
chrono = { workspace = true }
