[package]
name = "cyxcloud-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metadata service for CyxCloud (PostgreSQL + Redis)"

[dependencies]
cyxcloud-core = { path = "../cyxcloud-core" }
cyxcloud-storage = { path = "../cyxcloud-storage" }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
